project/logs/20250801_021626.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3d.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3d.PS.hlsl, profile:ps_6_0

Object3d.PS.hlsl:52:12: error: cannot initialize return object of type 'PixelShaderOutput' with an rvalue of type 'float4'
    return float4(input.texcoord, 0, 1); // UVを色で可視化（U=赤, V=緑）;
           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~

